@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.13.45
+ * @version 0.13.46
  */
 
 /* Breaks */
@@ -38,8 +38,10 @@
 @filter-bg-editor: gainsboro;
 @filter-bg-rule-status: lightpink;
 @filter-connector: gray;
+@indicator-star: gold;
 @input-border: gainsboro;
 @line-border: gray;
+@line-border-medium: hsl(from @line-border h s l / 0.5);
 @line-border-light: hsl(from @line-border h s l / 0.25);
 @message-border: firebrick;
 @nav-selected: seagreen;
@@ -100,6 +102,7 @@
 @nav-width-icon: 3.5rem;
 @nav-width-text: 6rem;
 @nav-panel-max-height: 32rem;
+@panel-gap: 1rem;
 @paragraph-max-width: 40rem;
 @select-min-width: 4rem;
 @select-max-width: 12rem;
