@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.13.45
+ * @version 0.13.46
  */
 @import "wcom-05-constants";
 *, *::before, *::after {
@@ -119,6 +119,17 @@ main {
                 font-family: #fonts[serif]; font-weight: @data-font-weight;
             }
         }
+        .block-container {
+            display: flex; flex-direction: column; gap: @panel-gap;
+            justify-content: space-between;
+        }
+        .inline-container {
+            display: grid; gap: @panel-gap;
+            grid-template-columns: auto 1fr;
+            @media (max-width: @lower-break) {
+                grid-template-columns: 1fr;
+            }
+        }
         .layout {
             display: flex; padding: 0.5rem; position: relative;
             &.centred {
@@ -127,22 +138,15 @@ main {
             &.left {
                 justify-content: left;
             }
-            .panel {
-                display: flex; flex-direction: column; gap: 1rem; opacity: 1;
-                transition: opacity 1s;
-                .block-container {
-                    display: flex; flex-wrap: wrap; gap: 1rem;
-                    justify-content: space-evenly;
-                }
-                &.fade {
-                    opacity: 0;
-                }
-                &.loading, &.unloading {
-                    position: absolute;
-                }
-                @media (max-width: @lower-break) {
-                    flex-direction: column;
-                }
+        }
+        .panel {
+            display: flex; flex-direction: column; gap: @panel-gap;
+            opacity: 1; transition: opacity 1s;
+            &.fade {
+                opacity: 0;
+            }
+            &.loading, &.unloading {
+                position: absolute;
             }
         }
     }
@@ -463,7 +467,7 @@ footer {
         align-items: center;
         background: linear-gradient(
             180deg, var(--bg-base) 0.43750rem,
-            @panel-shadow,
+            @line-border-medium,
             transparent 0.53125rem
         );
         column-gap: 0.25rem; display: flex; font-family: #fonts[sans];
@@ -472,7 +476,7 @@ footer {
         &::before {
             border-top-left-radius: 10px;
             border-left: 1px solid @line-border-light;
-            border-top: 1px solid @line-border-light;
+            border-top: 1px solid @line-border-medium;
             box-shadow: -3px -3px 0px 3px var(--bg-base);
             box-sizing: content-box;
             content: ''; height: 2.5rem; width: 0.5rem;
@@ -481,7 +485,7 @@ footer {
         &::after {
             background: linear-gradient(
                 70deg, transparent 48%,
-                @panel-shadow,
+                @line-border-medium,
                 var(--bg-base) 52%
             );
             content: ''; display: inline-block;
@@ -708,7 +712,7 @@ footer {
                 }
             }
         }
-        modal-header, .modal-footer {
+        .modal-header, .modal-footer {
             .button {
                 background: var(--btn-bg);
                 border: 2px outset @btn-border; border-radius: 50px;
